snapshots/DeepSpeech/native_client/modelstate.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 75
kind: unit
spaces:
  - name: "ModelState::ModelState"
    start_line: 9
    end_line: 20
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 5
        total_operators: 21
        unique_operands: 11
        total_operands: 19
        length: 40
        estimated_program_length: 49.663
        purity_ratio: 1.242
        vocabulary: 16
        volume: 160
        difficulty: 4.318
        level: 0.232
        effort: 690.909
        time: 38.384
        bugs: 0.026
      loc:
        sloc: 12
        ploc: 12
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 12
        ploc_average: 12
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 12
        sloc_max: 12
        cloc_min: 0
        cloc_max: 0
        ploc_min: 12
        ploc_max: 12
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 52
        average: 52
        min: 52
        max: 52
      mi:
        original: 104.124
        sei: 74.62
        visual_studio: 60.891
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: "ModelState::~ModelState"
    start_line: 22
    end_line: 24
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 4
        total_operators: 4
        unique_operands: 1
        total_operands: 1
        length: 5
        estimated_program_length: 8
        purity_ratio: 1.6
        vocabulary: 5
        volume: 11.61
        difficulty: 2
        level: 0.5
        effort: 23.219
        time: 1.29
        bugs: 0.003
      loc:
        sloc: 3
        ploc: 3
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 3
        ploc_average: 3
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 8
        average: 8
        min: 8
        max: 8
      mi:
        original: 140.223
        sei: 126.7
        visual_studio: 82.002
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: "ModelState::init"
    start_line: 26
    end_line: 30
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 8
        total_operators: 8
        unique_operands: 3
        total_operands: 3
        length: 11
        estimated_program_length: 28.755
        purity_ratio: 2.614
        vocabulary: 11
        volume: 38.054
        difficulty: 4
        level: 0.25
        effort: 152.215
        time: 8.456
        bugs: 0.01
      loc:
        sloc: 5
        ploc: 5
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 5
        ploc_average: 5
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 5
        sloc_max: 5
        cloc_min: 0
        cloc_max: 0
        ploc_min: 5
        ploc_max: 5
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 15
        average: 15
        min: 15
        max: 15
      mi:
        original: 125.774
        sei: 105.855
        visual_studio: 73.552
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: "ModelState::decode"
    start_line: 32
    end_line: 37
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 13
        total_operators: 21
        unique_operands: 12
        total_operands: 15
        length: 36
        estimated_program_length: 91.125
        purity_ratio: 2.531
        vocabulary: 25
        volume: 167.179
        difficulty: 8.125
        level: 0.123
        effort: 1358.328
        time: 75.463
        bugs: 0.041
      loc:
        sloc: 6
        ploc: 6
        lloc: 2
        cloc: 0
        blank: 0
        sloc_average: 6
        ploc_average: 6
        lloc_average: 2
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 2
        lloc_max: 2
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 46
        average: 46
        min: 46
        max: 46
      mi:
        original: 115.124
        sei: 90.49
        visual_studio: 67.324
      abc:
        assignments: 1
        branches: 4
        conditions: 0
        magnitude: 4.123
        value: 4.123
        assignments_average: 1
        branches_average: 4
        conditions_average: 0
        assignments_min: 1
        assignments_max: 1
        branches_min: 4
        branches_max: 4
        conditions_min: 0
        conditions_max: 0
  - name: "ModelState::decode_metadata"
    start_line: 39
    end_line: 75
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 2
        closure_args: 0
        function_args_average: 2
        closure_args_average: 0
        total: 2
        value: 2
        average: 2
        function_args_min: 2
        function_args_max: 2
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
      cyclomatic:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
        modified:
          sum: 3
          value: 3
          average: 3
          min: 3
          max: 3
      halstead:
        unique_operators: 21
        total_operators: 147
        unique_operands: 33
        total_operands: 98
        length: 245
        estimated_program_length: 258.704
        purity_ratio: 1.056
        vocabulary: 54
        volume: 1409.947
        difficulty: 31.182
        level: 0.032
        effort: 43964.725
        time: 2442.485
        bugs: 0.415
      loc:
        sloc: 37
        ploc: 32
        lloc: 14
        cloc: 8
        blank: 5
        sloc_average: 37
        ploc_average: 32
        lloc_average: 14
        cloc_average: 8
        blank_average: 5
        sloc_min: 37
        sloc_max: 37
        cloc_min: 8
        cloc_max: 8
        ploc_min: 32
        ploc_max: 32
        lloc_min: 14
        lloc_max: 14
        blank_min: 5
        blank_max: 5
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 295
        average: 295
        min: 295
        max: 295
      mi:
        original: 74.106
        sei: 71.31
        visual_studio: 43.337
      abc:
        assignments: 9
        branches: 16
        conditions: 2
        magnitude: 18.466
        value: 18.466
        assignments_average: 9
        branches_average: 16
        conditions_average: 2
        assignments_min: 9
        assignments_max: 9
        branches_min: 16
        branches_max: 16
        conditions_min: 2
        conditions_max: 2
metrics:
  nargs:
    function_args: 4
    closure_args: 0
    function_args_average: 0.8
    closure_args_average: 0
    total: 4
    value: 0
    average: 0.8
    function_args_min: 0
    function_args_max: 2
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 3
    average: 0.6
    min: 0
    max: 1
  cognitive:
    sum: 3
    value: 0
    average: 0.6
    min: 0
    max: 3
  cyclomatic:
    sum: 8
    value: 1
    average: 1.6
    min: 1
    max: 3
    modified:
      sum: 8
      value: 1
      average: 1.6
      min: 1
      max: 3
  halstead:
    unique_operators: 25
    total_operators: 204
    unique_operands: 48
    total_operands: 139
    length: 343
    estimated_program_length: 384.175
    purity_ratio: 1.12
    vocabulary: 73
    volume: 2123.11
    difficulty: 36.198
    level: 0.028
    effort: 76852.152
    time: 4269.564
    bugs: 0.603
  loc:
    sloc: 75
    ploc: 62
    lloc: 17
    cloc: 8
    blank: 13
    sloc_average: 12.5
    ploc_average: 10.333
    lloc_average: 2.833
    cloc_average: 1.333
    blank_average: 2.167
    sloc_min: 3
    sloc_max: 75
    cloc_min: 0
    cloc_max: 8
    ploc_min: 3
    ploc_max: 62
    lloc_min: 0
    lloc_max: 17
    blank_min: 0
    blank_max: 13
  nom:
    functions: 5
    closures: 0
    functions_average: 0.833
    closures_average: 0
    total: 5
    average: 0.833
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 431
    average: 71.833
    min: 8
    max: 295
  mi:
    original: 59.381
    sei: -36.233
    visual_studio: 34.726
  abc:
    assignments: 10
    branches: 20
    conditions: 2
    magnitude: 22.45
    value: 0
    assignments_average: 1.667
    branches_average: 3.333
    conditions_average: 0.333
    assignments_min: 0
    assignments_max: 9
    branches_min: 0
    branches_max: 16
    conditions_min: 0
    conditions_max: 2
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
