snapshots/DeepSpeech/native_client/modelstate.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 80
kind: unit
spaces:
  - name: ModelState
    start_line: 14
    end_line: 78
    kind: struct
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 17
        total_operators: 113
        unique_operands: 41
        total_operands: 53
        length: 166
        estimated_program_length: 289.147
        purity_ratio: 1.742
        vocabulary: 58
        volume: 972.425
        difficulty: 10.988
        level: 0.091
        effort: 10684.814
        time: 593.601
        bugs: 0.162
      loc:
        sloc: 65
        ploc: 29
        lloc: 2
        cloc: 29
        blank: 7
        sloc_average: 65
        ploc_average: 29
        lloc_average: 2
        cloc_average: 29
        blank_average: 7
        sloc_min: 65
        sloc_max: 65
        cloc_min: 29
        cloc_max: 29
        ploc_min: 29
        ploc_max: 29
        lloc_min: 2
        lloc_max: 2
        blank_min: 7
        blank_max: 7
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 211
        average: 211
        min: 211
        max: 211
      mi:
        original: 67.37
        sei: -18.276
        visual_studio: 39.398
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 0
        interface_wmc_sum: 0
        total: 0
      npm:
        class_npm_sum: 7
        interface_npm_sum: 0
        class_methods: 7
        interface_methods: 0
        class_coa: 1
        interface_coa: 0
        total: 7
        total_methods: 7
        coa: 1
      npa:
        class_npa_sum: 13
        interface_npa_sum: 0
        class_attributes: 13
        interface_attributes: 0
        class_cda: 1
        interface_cda: 0
        total: 13
        total_attributes: 13
        cda: 1
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 18
    total_operators: 116
    unique_operands: 46
    total_operands: 60
    length: 176
    estimated_program_length: 329.143
    purity_ratio: 1.87
    vocabulary: 64
    volume: 1056
    difficulty: 11.739
    level: 0.085
    effort: 12396.522
    time: 688.696
    bugs: 0.179
  loc:
    sloc: 80
    ploc: 38
    lloc: 2
    cloc: 30
    blank: 13
    sloc_average: 40
    ploc_average: 19
    lloc_average: 1
    cloc_average: 15
    blank_average: 6.5
    sloc_min: 65
    sloc_max: 80
    cloc_min: 29
    cloc_max: 30
    ploc_min: 29
    ploc_max: 38
    lloc_min: 2
    lloc_max: 2
    blank_min: 7
    blank_max: 13
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 238
    average: 119
    min: 27
    max: 211
  mi:
    original: 63.348
    sei: 12.793
    visual_studio: 37.045
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 7
    interface_npm_sum: 0
    class_methods: 7
    interface_methods: 0
    class_coa: 1
    interface_coa: 0
    total: 7
    total_methods: 7
    coa: 1
  npa:
    class_npa_sum: 13
    interface_npa_sum: 0
    class_attributes: 13
    interface_attributes: 0
    class_cda: 1
    interface_cda: 0
    total: 13
    total_attributes: 13
    cda: 1
