snapshots/DeepSpeech/native_client/tflitemodelstate.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 60
kind: unit
spaces:
  - name: TFLiteModelState
    start_line: 13
    end_line: 58
    kind: struct
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 17
        total_operators: 157
        unique_operands: 43
        total_operands: 64
        length: 221
        estimated_program_length: 302.816
        purity_ratio: 1.37
        vocabulary: 60
        volume: 1305.423
        difficulty: 12.651
        level: 0.079
        effort: 16515.117
        time: 917.506
        bugs: 0.216
      loc:
        sloc: 46
        ploc: 38
        lloc: 2
        cloc: 0
        blank: 8
        sloc_average: 46
        ploc_average: 38
        lloc_average: 2
        cloc_average: 0
        blank_average: 8
        sloc_min: 46
        sloc_max: 46
        cloc_min: 0
        cloc_max: 0
        ploc_min: 38
        ploc_max: 38
        lloc_min: 2
        lloc_max: 2
        blank_min: 8
        blank_max: 8
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 270
        average: 270
        min: 270
        max: 270
      mi:
        original: 71.44
        sei: 27.467
        visual_studio: 41.778
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 0
        interface_wmc_sum: 0
        total: 0
      npm:
        class_npm_sum: 5
        interface_npm_sum: 0
        class_methods: 11
        interface_methods: 0
        class_coa: 0.455
        interface_coa: 0
        total: 5
        total_methods: 11
        coa: 0.455
      npa:
        class_npa_sum: 12
        interface_npa_sum: 0
        class_attributes: 12
        interface_attributes: 0
        class_cda: 1
        interface_cda: 0
        total: 12
        total_attributes: 12
        cda: 1
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 17
    total_operators: 158
    unique_operands: 48
    total_operands: 70
    length: 228
    estimated_program_length: 337.565
    purity_ratio: 1.481
    vocabulary: 65
    volume: 1373.1
    difficulty: 12.396
    level: 0.081
    effort: 17020.717
    time: 945.595
    bugs: 0.221
  loc:
    sloc: 60
    ploc: 47
    lloc: 2
    cloc: 1
    blank: 13
    sloc_average: 30
    ploc_average: 23.5
    lloc_average: 1
    cloc_average: 0.5
    blank_average: 6.5
    sloc_min: 46
    sloc_max: 60
    cloc_min: 0
    cloc_max: 1
    ploc_min: 38
    ploc_max: 47
    lloc_min: 2
    lloc_max: 2
    blank_min: 8
    blank_max: 13
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 296
    average: 148
    min: 26
    max: 270
  mi:
    original: 66.643
    sei: 66.112
    visual_studio: 38.972
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 5
    interface_npm_sum: 0
    class_methods: 11
    interface_methods: 0
    class_coa: 0.455
    interface_coa: 0
    total: 5
    total_methods: 11
    coa: 0.455
  npa:
    class_npa_sum: 12
    interface_npa_sum: 0
    class_attributes: 12
    interface_attributes: 0
    class_cda: 1
    interface_cda: 0
    total: 12
    total_attributes: 12
    cda: 1
